--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-notifications": "^1.7.4",
+    "react-particles": "^2.7.1",
     "react-redux": "^8.0.5",
     "sass": "^1.57.1",
+    "tsparticles": "^2.7.1",
     "tsparticles-engine": "^2.7.1",
     "typescript": "4.9.4"
   }
