--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@next/font": "13.1.1",
+    "@react-spring/web": "^9.6.1",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
+    "axios": "^1.2.2",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
     "next": "13.1.1",
@@ -21,6 +23,8 @@
     "react-notifications": "^1.7.4",
     "react-particles": "^2.7.1",
     "react-redux": "^8.0.5",
+    "react-spring": "^9.6.1",
+    "react-waypoint": "^10.3.0",
     "sass": "^1.57.1",
     "tsparticles": "^2.7.1",
     "tsparticles-engine": "^2.7.1",
