--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.2.2",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
+    "lodash.debounce": "^4.0.8",
     "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -26,6 +27,10 @@
     "react-spring": "^9.6.1",
     "react-waypoint": "^10.3.0",
     "sass": "^1.57.1",
+    "simple-debouncer": "^1.0.3",
+    "smoothscroll-polyfill": "^0.4.4",
+    "styled-components": "^5.3.6",
+    "swiper": "^8.4.5",
     "tsparticles": "^2.7.1",
     "tsparticles-engine": "^2.7.1",
     "typescript": "4.9.4"
