--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "lodash.debounce": "^4.0.8",
     "next": "13.1.1",
     "react": "18.2.0",
+    "react-burger-menu": "^3.0.9",
     "react-dom": "18.2.0",
     "react-notifications": "^1.7.4",
     "react-particles": "^2.7.1",
@@ -33,6 +34,7 @@
     "swiper": "^8.4.5",
     "tsparticles": "^2.7.1",
     "tsparticles-engine": "^2.7.1",
-    "typescript": "4.9.4"
+    "typescript": "4.9.4",
+    "yarn": "^1.22.19"
   }
 }
