--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free-solid": "^5.0.13",
+    "@fortawesome/fontawesome-svg-core": "^6.2.1",
+    "@fortawesome/free-regular-svg-icons": "^6.2.1",
+    "@fortawesome/free-solid-svg-icons": "^6.2.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@next/font": "13.1.1",
     "@react-spring/web": "^9.6.1",
     "@types/node": "18.11.18",
@@ -17,11 +22,13 @@
     "axios": "^1.2.2",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
+    "formik": "^2.2.9",
     "lodash.debounce": "^4.0.8",
     "next": "13.1.1",
     "react": "18.2.0",
     "react-burger-menu": "^3.0.9",
     "react-dom": "18.2.0",
+    "react-google-recaptcha": "^2.1.0",
     "react-notifications": "^1.7.4",
     "react-particles": "^2.7.1",
     "react-redux": "^8.0.5",
@@ -35,6 +42,7 @@
     "tsparticles": "^2.7.1",
     "tsparticles-engine": "^2.7.1",
     "typescript": "4.9.4",
-    "yarn": "^1.22.19"
+    "yarn": "^1.22.19",
+    "yup": "^0.32.11"
   }
 }
