--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint-config-next": "13.1.1",
     "formik": "^2.2.9",
     "lodash.debounce": "^4.0.8",
+    "lottie-react": "^2.4.0",
     "next": "13.1.1",
     "react": "18.2.0",
     "react-burger-menu": "^3.0.9",
