--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "lodash.debounce": "^4.0.8",
     "lottie-react": "^2.4.0",
     "next": "13.1.1",
+    "node-telegram-bot-api": "^0.64.0",
     "react": "18.2.0",
     "react-burger-menu": "^3.0.9",
     "react-dom": "18.2.0",
